# kong-poc

./: README.md  create_upstreams.py  docker-compose.yaml  kong-migration.Dockerfile  pyproject.toml  wait-for-it.sh
kong-conf/: kong.yml
ng1/: default.conf
ng2/: default.conf
ng3/: default.conf
