[tool.poetry]
name = "kong"
version = "0.1.0"
description = ""
authors = ["Jonatan Vianna <jonatan.vianna@postclick.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.7"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
